/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.protodata.given;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.given.value";
option java_outer_classname = "FieldOptionSamplesProto";
option java_multiple_files = true;

// The message with integer option values.
message DiceRoll {
    int32 result = 1 [(min).value = "1", (max).value = "6"];
}

// The message type which uses `(min)` option with the floating point value.
message KelvinTemperature {
     double value = 1 [(min) = {
         value: "0.0",
         exclusive: true,
         error_msg: "Temperature cannot reach {other}K, but provided {value}."
     }];
 }

// A range of integer values.
//
// The range is empty if `min_value == max_value`.
// The option here references the field in the same type.
//
message Range {
    //TODO:2025-05-08:alexander.yevsyukov: Uncomment after the issue below is resolved.
    // https://github.com/SpineEventEngine/validation/issues/64
    int32 min_value = 1 /*[(max).value = "max_value"]*/;
    int32 max_value = 2;
}

// A [number] was generated within the requested [range].
//
// The options here reference nested fields.
//
message NumberGenerated {
    //TODO:2025-05-08:alexander.yevsyukov: Uncomment after the issue below is resolved.
    // https://github.com/SpineEventEngine/validation/issues/64
    int32 number = 1 /*[(min).value = "range.min_value", (max).value = "range.max_value"]*/;
    Range range = 2 [(required) = true];
}

//
// Types with negative cases
//

// The cases of wrong field references.
message Misreferences {
    //TODO:2025-05-08:alexander.yevsyukov: Uncomment after the issue below is resolved.
    // https://github.com/SpineEventEngine/validation/issues/64
    // Here the option references the field which is not declared in this message type.
    int32 wrong_direct = 1 /*[(min).value = "missing"]*/;

    //TODO:2025-05-08:alexander.yevsyukov: Uncomment after the issue below is resolved.
    // https://github.com/SpineEventEngine/validation/issues/64
    // Here the option references the missing nested field.
    int32 wrong_indirect = 2 /*[(max).value = "range.top"]*/;

    //TODO:2025-05-08:alexander.yevsyukov: Uncomment after the issue below is resolved.
    // https://github.com/SpineEventEngine/validation/issues/64
    // Even though the type of this field is wider than that of the referenced,
    // this field should generate the error because we require same types.
    int64 wrong_type = 3 /*[(max).value = "range.max_value"]*/;

    // The field for checking nested paths.
    Range range = 10 [(required) = true];
}

// The message with a boolean option.
message Student {
    string id = 1 [(set_once) = true];
}
